--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,52 +1,241 @@
-<<<<<<< HEAD
-/* -----------------------------HEADER CSS------------------------------------ */
-=======
+
+/* DISPLAY WORDS CSS */
+body{
+    display: flex;    
+    flex-direction: column;
+    align-items: center;
+    align-content: flex-start;
+    background: rgb(245, 245, 245);
+    
+
+    
+}
+.mainPageDivision{
+    flex-direction: column;
+    margin-bottom: 2pt; 
+    /* ali koptan was here */
+}
+
+.appendedDiv{
+    background: rgb(255, 255, 255);
+    width: 500pt;  
+    box-shadow: 2pt 2pt #D6D6D6;
+    border: 0px solid rgb(245, 245, 245);
+    border-radius: 10px;
+    align-items: flex-start;
+    border-bottom-color: #A8A8A8;
+    position: relative;
+
+}
+.editbutton{
+    color: #A8A8A8;
+    background: rgb(255, 255, 255);
+    font-size: 11pt;    
+    border: none;    
+    font-family: sans-serif;
+    margin-right: 35pt;
+    margin-top: 10pt;
+    top: 0pt;
+    outline: none;
+    float: right;
+    right: 0pt; 
+    position: absolute;
+
+
+}
+.deleteImageButton{
+    background: rgb(255, 255, 255);    
+    border: none;        
+    margin-right: 15pt;    
+    margin-top: 10pt;
+    top: 0pt;
+    height:16pt;
+    align-items: center;
+    width: 16pt;
+    right: 0pt; 
+    outline: none;
+    float: right;
+    position: absolute;    
+    
+    
+}
+.deleteimg{
+    height:9pt;
+    width: 9pt;
+    vertical-align: middle;
+}
+.editimg{
+    height:11pt;
+    width: 11pt;
+    vertical-align: middle;
+}
+.wordTypeDiv{
+    display:block;
+    align-content:flex-start;
+    display: inline-block;
+    height: 10%;
+    margin-left: 10pt;
+    margin-right: 0pt;
+    margin-bottom: 0pt;
+    margin-top: 0pt;
+}
+
+.word{
+    color: #2dc4f1;
+    display: inline-block;
+    font-size: 35pt;
+    margin: 0; 
+    padding: 0;
+    align-self: flex-start;
+    word-wrap: break-word;
+}
+
+.typeParagraph{
+    font-size: 10pt;
+    display: inline-block;
+    font-family: "sans-serif";
+    font-style: italic;
+    margin-left: 5pt;
+}
+.definitionClass{
+    font-family: "sans-serif";
+    word-wrap: break-word;
+    font-size: 12pt;
+    color: #3F3F3F;   
+   margin: 0;
+    font-weight: normal;
+
+}
+.defMainDiv{
+    align-items: center;
+    margin-right: 20pt;
+    margin-top: 0pt;
+    margin-left: 20pt;    
+    margin-bottom: 10pt;
+}
+.plusbutton{
+    position: fixed;
+    right:    80pt;
+    bottom:   60pt;
+    background: rgb(245, 245, 245);
+    border: none;
+    outline: none;
+}
+
+
+ /* EDIT MODAL CSS */
+ .typeInput {
+    width: 30%;
+    margin-left: 10pt;
+    border-width: 1pt;
+    border-radius: 4pt;
+    border: solid;
+    outline: none;
+    border-color:white;
+    
+}
+
+.editDiv{
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    top:0;
+    background: white;
+    position: fixed;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+}
+.wordlbl {
+    margin-left: 10pt;
+    font-size: 30pt;
+}
+
+/* ADD WORD MODAL CSS */
 .inputForm {
-    width: 100%;
-    margin: 5pt;
+    width: 50%;
+    margin: 10pt;
+    align-content: left;
+    border: solid;
+    border-width: 1pt;
+    border-radius: 4pt;
+    height: 25pt;
+    border-color: #E2E2E2;
+    outline: none;
+    
 }
 .addDiv{
-margin-top: 19pt;
-margin-left: 5pt;
-margin-right: 5pt;
- overflow: hidden;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    display: flex;
+    top:0;
+    background: white;
+    position: fixed;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
     }
-.addBtnDiv {
+.addCancelDiv {
     text-align: center;
 }
 .addBtn {      
-    padding: 10px 24px; 
-    margin-top: 10px;
     text-decoration: none;
-    background-color: #2d74f1;
+    background-color: #2dc4f1;
     color: white;
-    border: solid;
+    border: none;
+    border-width: 1pt;
+    border-radius: 4pt;
+    border-color: #2dc4f1;
+    outline: none;
+    height: 30pt;    
+    width: 60pt;
+    text-align: center;    
  }
-
  .deftxt {
-    width: 100%;
-    height: 150px;
-    margin: 5pt;
-    margin-top: 10pt;
+    width: 95%;
+    height: 150pt;
+    border: solid;
+    border-width: 1pt;
+    border-radius: 4pt;
+    border-color: #E2E2E2;
+    margin: 10pt;
+    outline: none;
+    
  }
 
- 
+ .cancelBtn{
+    align-self: center;  
+    text-decoration: none;
+    color: white;
+    border: none;
+    border-width: 1pt;
+    height: 30pt;
+    border-radius: 4pt;
+    border-color: #EEEEEE;
+    outline: none;
+    width: 60pt;
+    text-align: center;    
+ }
  .wordInputs {
      display: flex;
-     flex-direction: row;
-     justify-content: center;
+
+ 
  }
- .defLabelDiv {
+ .defDiv {
      display: flex;
      justify-content: flex-end;
  }
-
-body{
-    background:white;
-    margin: 0;
-    padding: 0;
-}
->>>>>>> b1b5e49d0360657cb4aebed01ad48dd345ac21b5
+ @-webkit-keyframes animatetop{
+     from{
+         top: -300pt;
+         opacity: 0;
+     }
+     to {
+         top:0;
+         opacity: 1;
+     }
+ }
+/* HEADER CSS */
 .headerbar{
     width: 100%;
     background: rgb(45, 196, 241);
