--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,17 +1,75 @@
 
-/* DISPLAY WORDS CSS */
 body{
     display: flex;    
     flex-direction: column;
     align-items: center;
     align-content: flex-start;
     background: rgb(245, 245, 245);
-    
-
-    
+    margin: 0;   
 }
+/* HEADER CSS */
+.headerbar{
+    width: 100%;
+    z-index: 2;
+    background: rgb(45, 196, 241);
+    display: flex;
+    height: 50pt;
+    margin-bottom: 10pt;
+    overflow: auto;
+    flex-direction:row;     
+    position: fixed;
+    align-items: center; 
+    justify-content: space-between;
+}
+.logo{
+    text-align:center;
+   float: left;
+   margin-left: 20pt;
+}
+
+.SearchText{
+    font-weight: normal;
+    outline: none;
+    font-family: sans-serif;    
+}
+.InputWithIcon{
+
+    text-align:center;
+    float: left;
+}
+.InputWithIcon i{
+    margin-left: -25pt;
+    color: rgb(45, 196, 241);
+}
+.InputWithIcon a{
+    margin-left: 15pt;
+    color:white;
+}
+.show{
+  float: right;
+  margin-right:20pt; 
+}
+.show i{
+  color:white;
+  justify-content: center;  
+}
+.showAll{
+  color:white;
+  justify-content: center;
+}
+input[type=text]{
+    padding: 7px;
+    border: none;
+    font-size: 16px;
+    font-family: sans-serif;
+}    
+
+/* DISPLAY WORDS CSS */
+
 .mainPageDivision{
+    z-index: 1;
     flex-direction: column;
+    margin-top: 60pt;
     margin-bottom: 2pt; 
     /* ali koptan was here */
 }
@@ -118,9 +176,13 @@ body{
     right:    80pt;
     bottom:   60pt;
     background: rgb(245, 245, 245);
-    border: none;
+    border: 0pt;
+    border-radius: 50pt;
+    border-color: blue;
     outline: none;
+
 }
+
 
 
  /* EDIT MODAL CSS */
@@ -136,6 +198,7 @@ body{
 }
 
 .editDiv{
+    z-index: 3;
     overflow: hidden;
     align-items: center;
     justify-content: center;
@@ -150,8 +213,8 @@ body{
     margin-left: 10pt;
     font-size: 30pt;
 }
-
 /* ADD WORD MODAL CSS */
+
 .inputForm {
     width: 50%;
     margin: 10pt;
@@ -165,6 +228,7 @@ body{
     
 }
 .addDiv{
+    z-index: 3;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -235,54 +299,3 @@ body{
          opacity: 1;
      }
  }
-/* HEADER CSS */
-.headerbar{
-    width: 100%;
-    background: rgb(45, 196, 241);
-    overflow: auto;
-    display: flex;
-    height: 50pt;
-    flex-direction:row;     
-    align-items: center; 
-}
-.logo{
-    text-align:center;
-    float: center;
-    flex-grow: 1;
-    flex: 1;
-}
-.InputWithIcon{
-text-align:center;
-  float: center;
-  flex: 2;
-  color: brown;
-  flex-grow: 3;
-}
-.InputWithIcon i{
-margin-left: -25pt;
-color: dodgerblue;
-}
-.InputWithIcon a{
-margin-left: 15pt;
-color:white;
-}
-.show{
-  float: center;
-  flex: 4;
-  flex-grow: 1;
-  justify-content: center;
-}
-.show i{
-  color:white;
-  justify-content: center;  
-}
-.show label{
-  color:white;
-  justify-content: center;
-}
-input[type=text]{
-    padding: 7px;
-    border: none;
-    font-size: 16px;
-    font-family: sans-serif;
-}    
