--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,8 @@
 
 body {
     display: flex;    
+    width:100%;
+    height: 100%;
     flex-direction: column;
     align-items: center;
     background: rgb(245, 245, 245);
@@ -75,7 +77,9 @@ body {
 .mainPageDivision {
     z-index: 1;
     flex: 2;
+    height: 100%;
     margin-top: 60pt;
+    margin-bottom: 110pt;
     /* ali koptan was here */
 }
 
