--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,7 @@ body {
     margin: 0;  
     font-family: sans-serif; 
     -webkit-user-select: none;
-    --primaryColor: white;
+    --primaryWhite: white;
     --mainColor: #2dc4f1;
     --backgroundColor: #f3f3f3;
     --borderColor: #E2E2E2;
@@ -48,7 +48,7 @@ body {
 .searchBar {
     text-align:center;
     float: left;
-    color:var(--primaryColor);
+    color:var(--primaryWhite);
 }
 
 .searchBar i {
@@ -72,7 +72,7 @@ body {
   float: right;
   margin-right: 20pt;
   margin-left: 5pt; 
-  color:var(--primaryColor);
+  color:var(--primaryWhite);
   justify-content: center;  
 }
 
@@ -102,7 +102,7 @@ body {
 
 .editbutton {
     color:  var(--backgroundColor);
-    background:var(--primaryColor);
+    background:var(--primaryWhite);
     font-size: 11pt;    
     border: none;    
     margin-right: 35pt;
@@ -115,7 +115,7 @@ body {
 }
 
 .deleteImageButton {
-    background: var(--primaryColor);    
+    background: var(--primaryWhite);    
     border: none;        
     margin-right: 15pt;    
     margin-top: 10pt;
@@ -205,7 +205,7 @@ body {
     border-radius: 4pt;
     border: solid;
     outline: none;
-    border-color:var(--primaryColor);
+    border-color:var(--primaryWhite);
     margin: 10pt;
 }
 
@@ -217,7 +217,7 @@ body {
     align-items: center;
     justify-content: center;
     top:0;
-    background: var(--primaryColor);
+    background: var(--primaryWhite);
     position: fixed;
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -249,7 +249,7 @@ body {
     align-items: center;
     display: flex;
     top:0;
-    background: var(--primaryColor);
+    background: var(--primaryWhite);
     position: fixed;
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -262,7 +262,7 @@ body {
 .addBtn {      
     text-decoration: none;
     background-color: var(--mainColor);
-    color: var(--primaryColor);
+    color: var(--primaryWhite);
     border: none;
     border-width: 1pt;
     border-radius: 4pt;
@@ -288,6 +288,7 @@ body {
 .cancelBtn {
     align-self: center;  
     text-decoration: none;
+    color: var(--primaryWhite);
     background-color: var(--secondayBtnColor);
     border: none;
     border-width: 1pt;
