--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -105,15 +105,29 @@ body {
     background:var(--primaryWhite);
     font-size: 11pt;    
     border: none;    
-    margin-right: 25pt;
+    margin-right: 41pt;
     margin-top: 10pt;
+    width:16pt;
     top: 0pt;
     outline: none;
     float: right;
     right: 0pt; 
     position: absolute;
 }
-
+.speechButton{
+     background: var(--primaryWhite);    
+    border: none;        
+     width:16pt;
+    margin-right: 67pt;    
+    margin-top: 10pt;
+    top: 0pt;
+    height:16pt;
+    align-items: center;
+    right: 0pt; 
+    outline: none;
+    float: right;
+    position: absolute; 
+}
 .deleteImageButton {
     background: var(--primaryWhite);    
     border: none;        
