--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -346,3 +346,26 @@ body {
         opacity: 1;
     }
 }
+
+   /* LOADING INDICATOR CSS */
+#loading{
+
+    width: 50px;
+    height: 50px;
+    border: 5px solid  var(--secondayBtnColor);
+    border-top-color: var(--mainColor);
+    border-radius: 100%;
+        /* To center */
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+        /* rotate */
+    animation: round 2s linear infinite;
+}
+@keyframes round{
+    from{ transform: rotate(0deg)}
+    to{transform: rotate(360deg)}
+}   
